src/test/ui/derives/derives-span-PartialOrd-struct.stderr
error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `std::cmp::PartialOrd` is not implemented for `Error`
   = note: required by `std::cmp::PartialOrd::partial_cmp`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
